# quamina-rs

./: Cargo.toml  README.md  TOOLKIT.md  experiment.md  spec.md
.github/workflows/: test.yml
benches/: matching.rs  simd_compare.rs
examples/: profile_citylots.rs  smoke.rs
src/: automaton.rs  case_folding.rs  flatten_json.rs  flattener.rs  json.rs  lib.rs  numbits.rs  regexp.rs  regexp_samples.rs  segments_tree.rs  unicode_categories.rs  wildcard.rs
src/automaton/: arena.rs  fa_builders.rs  mod.rs  mutable_matcher.rs  nfa.rs  small_table.rs  sparse_set.rs  tests.rs  thread_safe.rs  trie.rs
src/regexp/: mod.rs  nfa.rs  parser.rs
