[package]
name = "quamina"
version = "0.1.0"
edition = "2021"
description = "Fast pattern-matching library for filtering JSON events"
license = "Apache-2.0"
repository = "https://github.com/baldawarishi/quamina-rs"

[dependencies]
regex = "1"
arc-swap = "1.7"
simd-json = { version = "0.14", optional = true }

[features]
default = []
simd = ["simd-json"]

[dev-dependencies]
criterion = "0.5"
simd-json = "0.14"

[[bench]]
name = "matching"
harness = false

[[bench]]
name = "simd_compare"
harness = false
