[package]
name = "quamina"
version = "0.1.0"
edition = "2021"
description = "Fast pattern-matching library for filtering JSON events"
license = "Apache-2.0"
repository = "https://github.com/baldawarishi/quamina-rs"

[dependencies]
arc-swap = "1.7"
parking_lot = "0.12"
smallvec = "1.13"
rustc-hash = "2.1"

[dev-dependencies]
criterion = "0.5"
flate2 = "1.0"
rand = "0.8"
regex = "1"  # For benchmarking comparisons

[[bench]]
name = "matching"
harness = false
